k8s/deployment-nodejs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imdb-project-deployment
  labels:
    app: imdb-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: imdb-project
  template:
    metadata:
      labels:
        app: imdb-project
    spec:
      containers:
      - name: imdb-project
        image: imdb-project:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: data-volume
          mountPath: /data
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: imdb-pvc
