k8s/service-nodejs.yaml
apiVersion: v1
kind: Service
metadata:
  name: imdb-project-service
spec:
  type: NodePort
  selector:
    app: imdb-project
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
